[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Objects/Vault_panel/vault_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Objects/Vault_panel/Vault_panel.gd" type="Script" id=3]
[ext_resource path="res://src/Objects/Vault_panel/panel.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 104, 36 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Vault_panel" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["interactable"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_top = -240.0
margin_right = 12.0
margin_bottom = -74.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 159.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Vault Panel"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 3 )
text = "Hold [F] to Open Vault (requires vault keycard and code)"
align = 1
autowrap = true

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 129.0
margin_right = 210.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 4 )
step = 1.0
rounded = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 4.76837e-06, -12 )
scale = Vector2( 10.4, 3.6 )

[node name="panel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "SFX"

[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
